# Gemurmel

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
GemurmelServer/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt
gemurmel/: CMakeLists.txt
gemurmel/include/gemurmel/: asio.hpp  client.hpp  client_event.hpp  model.hpp  protocol.hpp  server.hpp  strong_id.hpp
gemurmel/include/gemurmel/detail/: protocol.hpp  thread_safe_queue.hpp  varint.hpp
gemurmel/src/: client.cpp  protocol.cpp  server.cpp  varint.cpp
gemurmel/test/: CMakeLists.txt  test_client.cpp  test_strong_id.cpp  test_varint.cpp
mumble_protocol/: CMakeLists.txt
mumble_protocol/src/: client.cpp
server/: CMakeLists.txt
server/src/: main.cpp
